Package Skia Membrane demo